--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,6 @@
 </head>
 <body>
    
-    <div> <img src="images/CV Professionnel Informatique Photo Moderne Gris Sobre.png" alt="" width="900"></div>
+    <div> <img src="images/CV Professionnel Informatique Photo Moderne Gris Sobre.png" alt="100" width="900"></div>
 </body>
 </html>
